--- a/1.html
+++ b/1.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <title>Document</title>
 </head>
 <body>
-	<script>
-		'use strict'
-		
-		let Tc = 20;
-		let Tf = (9 / 5) * Tc + 32;
-		alert(Tf);
+    <script>
+        "use strict";
 
-	</script>
+        //пример 1
+        let a = 1, b = 1, c, d;
+        c = ++a;
+        alert(c); // ответ: 2
+        //пример 2
+        d = b++;
+        alert(d); //ответ: 1
+        //пример 3
+        c = 2 + ++a;
+        alert(c); //ответ: 5
+        //пример 4
+        d = 2 + b++;
+        alert(d); //ответ: 4
+        alert(a); //3
+        alert(b); //3
+    </script>
 </body>
 </html>
