--- a/3.html
+++ b/3.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <title>Document</title>
 </head>
 <body>
-	<script>
-		'use strict'
-		
-		let result1 = 10 + 10 + "10";
-        let result2 = 10 + "10" + 10;
-        let result3 = 10 + 10 + +"10";
-        let result4 = 10 / -"";
-        let result5 = 10 / +"2,5"; 
+    <script>
+        "use strict";
 
-	</script>
+        let a = 3, b = 6;
+        if (a >= 0 $$ b >= 0) {
+            console.log(a - b);
+        } else if (a < 0 $$ b < 0) {
+            console.log(a * b);
+        } else if (a * b < 0) {
+            console.log(a + b);
+        }
+    </script>
 </body>
 </html>
