--- a/4.html
+++ b/4.html
@@ -1,31 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <title>Document</title>
 </head>
 <body>
-	<script>
-		'use strict'
-		
-        //
-        let mode = "normal";
-
-        //
-        let my_valu3 = 102;
-
-        //
-        //let 3my_value3 = "102";
-
-        //
-        let __hello__ = "world";
-
-        //
-        let $$$ = "money";
-
-        //
-        //let !0_world = true;
-
-	</script>
+    <script src=4.js></script>
 </body>
 </html>
