--- a/5.html
+++ b/5.html
@@ -5,11 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        "use strict";
-
-        let a = 2;
-        let x = 1 + (a *= 2); //ответ: 5 2*2+1=5
-    </script>
+    <script src=5.js></script>
 </body>
 </html>
